[package]
name = "minilp"
version = "0.2.2"
authors = ["Alexey Zatelepin <alex.zatelepin@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "A fast linear programming solver library."
repository = "https://github.com/ztlpn/minilp/"
readme = "README.md"
keywords = ["linear-programming", "optimization"]
categories = ["mathematics", "science"]

[dependencies]
sprs = { version = "0.7.1", default-features = false }
log = "0.4.8"

[dev-dependencies]
ndarray = "0.13.0"
rand = "0.7"
rand_pcg = "0.2.1"
env_logger = "0.7.1"
